--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.drawer-side a.active {
+  color: rgb(255, 255, 255) !important;
+}
+.drawer-side a {
+  background-color: transparent !important;
+}
